# CrazyEngineGUI

./: .gitignore  CMakeLists.txt
include/CrazyEngineGUI/: ComponentState.h  Direction.h  Fill.h  TextAlignment.h  TransformManager.h  UIComponent.h
include/CrazyEngineGUI/Components/: Button.h  Canvas.h  Checkbox.h  Dropdown.h  Image.h  Label.h  Panel.h  TextDropdown.h
include/CrazyEngineGUI/Fills/: ColourFill.h  TextureAtlasFill.h  TextureFill.h
include/CrazyEngineGUI/Transforms/: MeasurementPoint.h  UIScale.h  UITranslation.h
include/CrazyEngineGUI/Transforms/Scales/: AspectRatioScale.h  PixelScale.h  RelativeScale.h
include/CrazyEngineGUI/Transforms/Translations/: CentreTranslation.h  PixelTranslation.h  RelativeTranslation.h
src/: TransformManager.cpp  UIComponent.cpp
src/Components/: Button.cpp  Canvas.cpp  Checkbox.cpp  Dropdown.cpp  Image.cpp  Label.cpp  Panel.cpp  TextDropdown.cpp
src/Fills/: ColourFill.cpp  TextureAtlasFill.cpp  TextureFill.cpp
src/Transforms/: UITranslation.cpp
src/Transforms/Scales/: AspectRatioScale.cpp  PixelScale.cpp  RelativeScale.cpp
src/Transforms/Translations/: CentreTranslation.cpp  PixelTranslation.cpp  RelativeTranslation.cpp
